11. Fix footer-grid component styling 11.1 display to flex, flex direction, gap, center all items 11.2 header image size style fix 11.3 place all social icon horizontally

--- a/styles/style.css
+++ b/styles/style.css
@@ -226,6 +226,24 @@ img {
 }
 
 /* style 7th component */
+.footer-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-grid__img {
+  /* reduce image size */
+  width: 15%;
+}
+
+.footer-grid-img-section > img {
+  /* by default they are display block with 100% width */
+  display: inline;
+  margin: 0 2rem;
+}
 
 /* grid area names */
 .header-grid {
